--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-filesize": "0.0.6",
     "gulp-iconfont": "^1.0.1",
     "gulp-imagemin": "^2.2.1",
+    "gulp-minify-css": "^1.1.6",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^4.0.0",
@@ -29,11 +30,13 @@
     "gulp-sequence": "^0.3.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-swig": "^0.7.4",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
     "lodash": "^3.9.3",
     "merge-stream": "^0.1.7",
     "pretty-hrtime": "^1.0.0",
     "require-dir": "^0.3.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
   },
