--- a/package.json
+++ b/package.json
@@ -41,6 +41,23 @@
     "watchify": "^3.2.1"
   },
   "devDependencies": {
-    "gulp-watch": "^4.2.4"
+    "gulp-watch": "^4.2.4",
+    "jspm": "^0.15.7"
+  },
+  "jspm": {
+    "format": "es6",
+    "directories": {
+      "baseURL": "public/assets"
+    },
+    "dependencies": {
+      "whatwg-fetch": "npm:whatwg-fetch@^0.9.0"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.1.13",
+      "babel-runtime": "npm:babel-runtime@^5.1.13",
+      "core-js": "npm:core-js@^0.9.4",
+      "traceur": "github:jmcriffey/bower-traceur@0.0.88",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
+    }
   }
 }
